--- a/packages/card/src/helperComponents/FunctionBadgeWrapper/styles.module.scss
+++ b/packages/card/src/helperComponents/FunctionBadgeWrapper/styles.module.scss
@@ -4,8 +4,10 @@
   @include composite-var($card-function-badge);
 
   position: absolute;
+  z-index: 1;
   top: 0;
   right: 0;
+  
   box-sizing: border-box;
 }
 
